up to date for pulling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <nav class="home-main-nav">
           <ul>
             <li class="cursive">
-              <a href="#">Assn2</a>
+              <a href="#">Phan's Clothing Store</a>
             </li>
             <li>
               <a [routerLink]="'/about'">About</a>
