--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z6">
+<!-- <mat-toolbar color="primary" class="mat-elevation-z6">
   <mat-toolbar-row>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav">
       <a class="navbar-brand" href="#">
@@ -23,4 +23,35 @@
       </div>
     </nav>
   </mat-toolbar-row>
-</mat-toolbar>
+</mat-toolbar> -->
+<div id="home-container">
+  <div class="r1">
+    <div class="r1-inner">
+      <nav class="home-main-nav">
+        <ul>
+          <li class="cursive">
+            <a href="#">Assn2</a>
+          </li>
+          <li>
+            <a [routerLink]="'/about'">About</a>
+          </li>
+          <li>
+            <a [routerLink]="'/artworks'">Work</a>
+          </li>
+          <li>
+            <a [routerLink]="'/artist'">Artist</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="gallery-description">
+        <h2 class="cursive drop-shadow">Jacques-Louis David</h2>
+        <p class="drop-shadow">The Intervention of the Sabine Women was painted in</p>
+        <p class="drop-shadow">1799 and resides in the Musée du Louvre, Paris.</p>
+        <button class="btn btn-primary">Learn More</button>
+      </div>
+    </div>
+  </div>
+  <div class="r2">
+    <!-- <app-art-work-card *ngFor="let artwork of artworks" [artwork]="artwork"></app-art-work-card> -->
+  </div>
+</div>
