--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,3 +30,4 @@
       <!-- <app-art-work-card *ngFor="let artwork of artworks" [artwork]="artwork"></app-art-work-card> -->
     </div>
   </div>
+  <div></div>
