New homepage with functioning cards

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
           <h2 class="cursive drop-shadow">Jacques-Louis David</h2>
           <p class="drop-shadow">The Intervention of the Sabine Women was painted in</p>
           <p class="drop-shadow">1799 and resides in the Musée du Louvre, Paris.</p>
-          <button class="btn btn-primary">Learn More</button>
+          <button class="btn btn-primary">Learn sdfsdfsdfsfMore</button>
         </div>
       </div>
     </div>
