updated changes routing broken

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -24,12 +24,16 @@
       <div class="align-center">r3c3</div>
     </footer> -->
 
-  </div>
+  <!-- </div>
 </body>
 
 </html>
 
-<app-toast></app-toast>
+<app-toast></app-toast> -->
 <!-- <app-home></app-home> -->
 
+<!-- <router-outlet></router-outlet> -->
+
+<app-main-nav></app-main-nav>
+<app-toast></app-toast>
 <router-outlet></router-outlet>
