removed undefined path so routing is available. currently will not load images.

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,8 @@
   /* home page css */
+  .banner-img {
+    height: 80px;
+    width: 80px;
+  }
   .cursive {
     font-family: 'Cookie', cursive;
   }
