--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,4 @@
-<!-- <!DOCTYPE html>
-<html>
-
-<head>
-  <title>S T O N K S</title>
-</head>
-
-<body>
-  <div class="app-container-grid">
-    <app-main-nav></app-main-nav>
-    <!-- <header class="main-header">
-      <span class="align-center">r1c1</span>
-      <div id="banner" class="align-center" (mouseenter)="showGreeting()" (mouseleave)="hideGreeting()">r1c2</div>
-      <div class="align-center">r1c3</div>
-    </header> -->
-    <!-- <div class="main-container-grid">
-      <div class="align-center">r2c1</div>
-      <div class="align-center">r2c2</div>
-      <div class="align-center">r2c3</div>
-    </div> -->
-    <!-- <footer class="main-footer">
-      <div class="align-center">r3c1</div>
-      <div class="align-center">r3c2</div>
-      <div class="align-center">r3c3</div>
-    </footer> -->
-
-  <!-- </div>
-</body>
-
-</html>
-
-<app-toast></app-toast> -->
-<!-- <app-home></app-home> -->
-
-<!-- <router-outlet></router-outlet> -->
-
-<app-main-nav></app-main-nav>
 <app-toast></app-toast>
+<app-main-nav></app-main-nav>
 <router-outlet></router-outlet>
+<app-main-footer></app-main-footer>
