--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,33 +1,3 @@
-<app-cart></app-cart>
-<div id="home-container">
-    <div class="r1">
-      <div class="r1-inner">
-        <nav class="home-main-nav">
-          <ul>
-            <li class="cursive">
-              <a href="#">Phan's Clothing Store</a>
-            </li>
-            <li>
-              <a [routerLink]="'/about'">About</a>
-            </li>
-            <li>
-              <a [routerLink]="'/artworks'">Work</a>
-            </li>
-            <li>
-              <a [routerLink]="'/artist'">Artist</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="gallery-description">
-          <h2 class="cursive drop-shadow">Jacques-Louis David</h2>
-          <p class="drop-shadow">The Intervention of the Sabine Women was painted in</p>
-          <p class="drop-shadow">1799 and resides in the Musée du Louvre, Paris.</p>
-          <button class="btn btn-primary">Learn sdfsdfsdfsfMore</button>
-        </div>
-      </div>
-    </div>
-    <div class="r2">
-      <!-- <app-art-work-card *ngFor="let artwork of artworks" [artwork]="artwork"></app-art-work-card> -->
-    </div>
-  </div>
-  <div></div>
+<div>
+  <img class="banner-img" src="../../img/banner.jpg">
+</div>
