--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -1,105 +1,38 @@
-<!-- <mat-toolbar color="primary" class="mat-elevation-z6">
-  <mat-toolbar-row>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav">
-      <a class="navbar-brand" href="#">
-        <img class="brand" src="../../assets/logo.jpeg" alt="brand">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" [routerLink]="['']">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" (click)="showAbout()">About</a>
-          </li>
-        </ul>
-        <div class="btn-group">
-          <button mat-raised-button color="accent" *ngIf="!currentUser" (click)="logout()">Logout</button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['app-men']" class="nav-link">Men</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </div>
-    </nav>
-  </mat-toolbar-row>
-</mat-toolbar> -->
-<!-- <div id="home-container">
-  <div class="r1">
-    <div class="r1-inner"> -->
-      <!-- <nav class="home-main-nav">
-        <ul>
-          <li class="cursive">
-            <a href="#">Assn2</a>
-          </li>
-          <li>
-            <a [routerLink]="'/about'">About</a>
-          </li>
-          <li>
-            <a [routerLink]="'/artworks'">Work</a>
-          </li>
-          <li>
-            <a [routerLink]="'/artist'">Artist</a>
-          </li>
-        </ul>
-      </nav> -->
-    <div>
-      <ul class="nav justify-content-end nav-action-container">
-        <li class="nav-item">
-          <button mat-raised-button color="primary" (click)="createCar()">Add New Car</button>
-        </li>
-        <li class="nav-item">
-          <button mat-raised-button color="primary" (click)="createClothing()">Add New Clothing</button>
-        </li>
-        <li class="nav-item">
-          <button mat-raised-button color="primary" (click)="showCars()">Get Cars</button>
-        </li>
-        <li class="nav-item">
-          <button mat-raised-button color="primary" (click)="refresh()">Get Clothings</button>
-          </li>
-        <!-- <li class="nav-item">
-          <button mat-raised-button color="primary" (click)="getClothingByColor()">Pink</button>
-        </li> -->
-        <li class="nav-item">
-          <a [routerLink]="'/app-cart'">Edit Inventory</a>
-        </li>
-      </ul>
-    </div>
-      <section class="animated-grid">
-        <div class="card" *ngFor="let clothing of clothings; let i = index">
-          <img class="cover" [src]="clothing.clothing_url" alt="bike">
-          <!-- <div class="card"> -->
-            <!-- <h5 class="card-title">Card title</h5> -->
-            <!-- <p class="card-text">Tshirt</p> -->
-          <!-- </div> -->
-          <!-- <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-          </div> -->
-        </div>
-        <div class="card" *ngFor="let car of cars; let i = index">
-          <img class="cover" [src]="car.image_url" alt="bike">
-          <h5 class="card-title">Card title</h5>
-        </div>
-      </section>
-
-
-        <!-- <div class="card" *ngFor="let car of cars; let i = index">
-          <img class="cover" [src]="car.image_url" alt="bike">
-          <h5 class="card-title">Card title</h5>
-        </div> -->
-        <!-- <div
-        class="card"
-        style="background-image:url('https://images.unsplash.com/photo-1558981359-219d6364c9c8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80')"
-      ></div> -->
- 
-
-
-      
-    <!-- </div>
-  </div> -->
-  <div class="r2">
-    <!-- <app-art-work-card *ngFor="let artwork of artworks" [artwork]="artwork"></app-art-work-card> -->
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
-<!-- </div> -->
-
+</nav>
 <router-outlet></router-outlet>
