fixed routing and images

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,15 @@
   /* home page css */
-  .banner-img {
-    height: 80px;
-    width: 80px;
+  .banner-class {
+    height: 50%;
+    float: left;
+    margin-right: 20px;
+    width: 100%;
+  }
+  .banner-class > img{
+    object-fit: cover;
+    margin: 10px;
+    height: 100%;
+    width: 100%;
   }
   .cursive {
     font-family: 'Cookie', cursive;
