--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<div>
-  <img class="banner-img" src="../../img/banner.jpg">
+<div class="banner-class">
+  <img src="../../assets/banner.jpg">
 </div>
