--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -61,7 +61,7 @@
           <button mat-raised-button color="primary" (click)="getClothingByColor()">Pink</button>
         </li> -->
         <li class="nav-item">
-          <a [routerLink]="'/app-cart'">Edit Inventory</a>
+          <a [routerLink]="'/app-store'">Edit Inventory</a>
         </li>
       </ul>
     </div>
