--- a/src/app/main-footer/main-footer.component.css
+++ b/src/app/main-footer/main-footer.component.css
@@ -1,3 +1,5 @@
+
+
 .site-footer
 {
   background-color:#F8F9FA;
@@ -5,6 +7,9 @@
   font-size:15px;
   line-height:24px;
   color:#737373;
+  position: absolute;
+  bottom: 0px;
+  width: 100vw;
 }
 .site-footer hr
 {
@@ -160,4 +165,8 @@
     margin-right:0;
     font-weight:600
   }
+}
+
+.container {
+  margin-top: 50px;
 }
