--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@
 * {
   margin:0px;
   padding: 0px;
-
 }
 
 html, body {
@@ -106,7 +105,7 @@ body {
   width: 100vw;
   max-height: 100vh;
   max-width: 100vw;
-  overflow: hidden;
+  overflow: scroll;
   background-color: #f1f1f1;
 }
 
@@ -126,4 +125,12 @@ body {
 .mat-raised-button.mat-primary {
   background-color: #343434;
   color: #FFF;
+}
+footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  overflow: scroll;
 }
