--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -16,7 +16,13 @@
       <li class="nav-item">
         <a [routerLink]="['app-men']" class="nav-link">Women</a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item">
+        <a [routerLink]="['about-us']" class="nav-link">About Us</a>
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['login']" class="nav-link">Login</a>
+      </li>
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Dropdown
@@ -27,10 +33,10 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </li>
-      <li class="nav-item">
+      </li> -->
+      <!-- <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+      </li> -->
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
