--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,18 @@
-<div class="banner-class">
+<!-- <div class="banner-class">
   <img src="../../assets/banner.jpg">
   
+</div> -->
+
+<div class = "main-container">
+  <div class="row">
+
+    <app-main-nav></app-main-nav>
+
+    <div>
+      asdadasdasd
+    </div>
+
+    <app-main-footer></app-main-footer>
+
+  </div>
 </div>
