--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-toast></app-toast>
+<!-- <app-toast></app-toast>
 <app-main-nav></app-main-nav>
 <router-outlet></router-outlet>
-<app-main-footer></app-main-footer>
+<app-main-footer></app-main-footer> -->
+<router-outlet></router-outlet>
