--- a/src/app/main-footer/main-footer.component.css
+++ b/src/app/main-footer/main-footer.component.css
@@ -3,13 +3,14 @@
 .site-footer
 {
   background-color:#F8F9FA;
-  padding:45px 0 20px;
+  /* padding:45px 0 20px; */
   font-size:15px;
   line-height:24px;
   color:#737373;
   position: absolute;
   bottom: 0px;
   width: 100vw;
+  max-height: 25%;
 }
 .site-footer hr
 {
