--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,29 @@
-<div class="home-container">
-  <div class="banner-class">
-    <img src="../../assets/banner.jpg">
-    <div class="text-container">
-      <h1>This is OnlyPhans</h1>
-      <h2>A different perspective on clothing</h2>
-      <div class="btn-group mx-auto center-buttons" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-light spacer">Shop Men</button>
-        <button type="button" class="btn btn-light">Shop Women</button>
+<div class="main-container">
+  <div class="row">
+
+    <app-main-nav></app-main-nav>
+
+    <div>
+      <div class="home-container">
+        <div class="banner-class">
+          <img src="../../assets/banner.jpg">
+          <div class="text-container">
+            <h1>This is OnlyPhans</h1>
+            <h2>A different perspective on clothing</h2>
+            <div class="btn-group mx-auto center-buttons" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-light spacer">Shop Men</button>
+              <button type="button" class="btn btn-light">Shop Women</button>
+            </div>
+            <!-- <div class="button-container">
+              <button type="button" class="btn btn-primary">Primary</button>
+              <button type="button" class="btn btn-primary">Primary</button>
+            </div> -->
+          </div>
+        </div>
       </div>
-      <!-- <div class="button-container">
-        <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-primary">Primary</button>
-      </div> -->
     </div>
+
+    <app-main-footer></app-main-footer>
+
   </div>
 </div>
