--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -125,3 +125,13 @@
     text-align: left;
   }
   /* end home page css */
+
+  .main-container {
+    height: 100%;
+  }
+
+  .row {
+    display: grid;
+    grid-template-rows: .5fr 3fr 1fr;
+    height: 100%;
+  }
