--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,16 +1,16 @@
   /* home page css */
   .banner-class {
     min-height: 50%;
-    float: left;
-    margin-right: 20px;
+    /* float: left; */
+    /* margin-right: 20px; */
     width: 100%;
     background-color: red;
   }
   .banner-class > img{
     object-fit: cover;
     margin: 10px;
-    /* height: 100%;
-    width: 100%; */
+    height: 100%;
+    width: 100%; 
   }
   .cursive {
     font-family: 'Cookie', cursive;
@@ -94,6 +94,10 @@
   }
   /* end home page css */
 
+
+
+
+/* ABOVE THIS IS not in use */
 .main-container{
   height: 100%;
 }
