--- a/src/styles.css
+++ b/src/styles.css
@@ -106,7 +106,7 @@ body {
   width: 100vw;
   max-height: 100vh;
   max-width: 100vw;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: #f1f1f1;
 }
 
