--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@
 }
 
 html, body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 h1 {
   font-size: 2em;
@@ -101,8 +101,8 @@ h1 {
 /*  */
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   max-height: 100vh;
   max-width: 100vw;
   /* overflow: scroll; */
@@ -133,4 +133,15 @@ footer {
   height: 60px;
   line-height: 60px;
   /* overflow: scroll; */
+}
+
+/* CLOTHING STORE CSS */
+.three-row-body {
+  display: grid;
+  grid-template-rows: .5fr 3fr 1fr;
+  height: 100%;
+}
+
+.main-container {
+  height: 100%;
 }
