--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,37 +1,30 @@
-
 <div class="three-row-body">
   <div>
     <app-main-nav></app-main-nav>
   </div>
   <div id="about-container">
     <div id="about-container-inner">
-        <div class="about-content">
-            <div class="banner">
-                <h2 class="drop-shadow">About Us</h2>
-                <p class="drop-shadow">This store was founded by Joseph Huizar, Franklin Delos Santos, and Joshuah Gee Guerrero</p>
-                <p class="drop-shadow">This store was designed to make a difference in the clothing industry.</p>
-            </div>
+      <div class="about-content">
+        <div class="banner">
+          <h2 class="drop-shadow">About Us</h2>
+          <p class="drop-shadow">This store was founded by Joseph Huizar, Franklin Delos Santos, and Joshuah Gee
+            Guerrero</p>
+          <p class="drop-shadow">This store was designed to make a difference in the clothing industry.</p>
         </div>
-        <div class="top-section box-shadow">
-            <div class="top-inner-section">
-                <div class="pic-container">
-                    <img src="../assets/img/IMG_9398.JPG" class="bio-image" alt="my pic">
-                </div>
-                <div class="bio-description">
-                    <h2>Who is Joseph Huizar?</h2>
-                    <p>I am a student at Fresno State studying Computer Information Systems. I have a
-                        passion for technology and love working with anything computer related. I also love to
-                        play video games, specifically computer games. I used to run a Youtube gaming channel back
-                        in the day and may soon be reprising my old persona once again. I will be graduating in the
-                        Fall of 2020, so I will be able to determine what career path I would like to pursue and
-                        establish myself as an individual.</p>
-                </div>
-            </div>
+      </div>
+      <div class="top-section box-shadow">
+        <div class="top-inner-section">
+          <div class="bio-description">
+            <h2>What is OnlyPhans?</h2>
+            <p>OnlyPhans is your one stop shop for all your Phanboy desires! This PREMIUM site is highly popular amongst
+              the younger generation and gamers! With a little of something for everyone, we hope our Phans keep cumming
+              back over and over!</p>
+          </div>
         </div>
+      </div>
     </div>
   </div>
   <div>
     <app-main-footer></app-main-footer>
   </div>
 </div>
-
