--- a/src/app/main-footer/main-footer.component.css
+++ b/src/app/main-footer/main-footer.component.css
@@ -2,14 +2,14 @@
 
 .site-footer
 {
-  background-color: #2EC4B6;
+  background-color: #1A535C;
   /* background-color:#F8F9FA; */
   /* padding:45px 0 20px; */
   /* padding: 10px 0px 0px; */
   height: 100%;
   font-size:15px;
   line-height:24px;
-  color:#737373;
+  color:#F7FFF7;
   /* overflow: hidden; */
 }
 
@@ -28,7 +28,7 @@
 }
 .site-footer h6
 {
-  color:#000;
+  color: #FFE66D;
   font-size:16px;
   text-transform:uppercase;
   margin-top:5px;
@@ -36,11 +36,11 @@
 }
 .site-footer a
 {
-  color:#7C7C7D;
+  color: #FF6B6B;
 }
 .site-footer a:hover
 {
-  color:#3366cc;
+  color:#FFE66D;
   text-decoration:none;
 }
 .footer-links
@@ -54,11 +54,11 @@
 }
 .footer-links a
 {
-  color:#737373
+  color:#FF6B6B
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
-  color:#3366cc;
+  color:#FFE66D;
   text-decoration:none;
 }
 .footer-links.inline li
@@ -85,10 +85,10 @@
 }
 @media (max-width:991px)
 {
-  .site-footer [class^=col-]
+  /* .site-footer [class^=col-]
   {
-    /* margin-bottom:30px */
-  }
+    margin-bottom:30px
+  } */
 }
 @media (max-width:767px)
 {
