--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="main-container">
-  <div class="row">
+  <div class="three-row-body">
 
-    <app-main-nav></app-main-nav>
+    <div>
+      <app-main-nav></app-main-nav>
+    </div>
 
     <div>
       <div class="home-container">
@@ -20,6 +22,9 @@
             </div> -->
           </div>
         </div>
+        
+        
+
       </div>
     </div>
 
