--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@
 }
 
 html, body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 h1 {
   font-size: 2em;
@@ -27,7 +27,7 @@ h1 {
   text-shadow: 1px 2px 3px #000;
 }
 #home-container {
-  height: 100%;
+  /* height: 100%; */
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
@@ -101,10 +101,10 @@ h1 {
 /*  */
 html,
 body {
-  height: 100vh;
-  width: 100vw;
-  max-height: 100vh;
-  max-width: 100vw;
+  height: 100%;
+  width: 100%;
+  /* max-height: 100vh;
+  max-width: 100vw; */
   /* overflow: scroll; */
   background-color: #f1f1f1;
 }
@@ -126,11 +126,11 @@ body {
   background-color: #343434;
   color: #FFF;
 }
-footer {
+/* footer {
   position: relative;
   bottom: 0;
   width: 100%;
   height: 60px;
   line-height: 60px;
-  /* overflow: scroll; */
-}
+  overflow: scroll;
+} */
