--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -11,16 +11,19 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['app-men']" class="nav-link">Men</a>
+        <a (click)="goToMen()" class="nav-link">Men</a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['app-men']" class="nav-link">Women</a>
+        <a (click)="goToMen()" class="nav-link">Women</a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['about-us']" class="nav-link">About Us</a>
+        <a (click)="goToAboutUs()" class="nav-link">About Us</a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['login']" class="nav-link">Login</a>
+        <a (click)="goToLogin()" class="nav-link">Login</a>
+      </li>
+      <li class="nav-item">
+        <button (click)="goToEdit()">Test</button>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
