--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,5 @@
+<app-main-nav></app-main-nav>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav">
   
 </nav>
@@ -7,16 +9,19 @@
     <button mat-raised-button color="primary" (click)="createCar()">Add New Car</button>
   </li>
   <li class="nav-item">
-    <button mat-raised-button color="primary">Add Bike Model 1</button>
+    <button mat-raised-button color="primary" (click)="createClothing()">Add New Clothing</button>
   </li>
   <li class="nav-item">
-    <button mat-raised-button color="primary">Add Bike Model 2</button>
+    <button mat-raised-button color="primary" (click)="showCars()">Get Cars</button>
   </li>
   <li class="nav-item">
-    <button mat-raised-button color="primary">Add Bike Model 3</button>
+    <button mat-raised-button color="primary" (click)="refresh()">Get Clothings</button>
     </li>
+  <!-- <li class="nav-item">
+    <button mat-raised-button color="primary" (click)="getClothingByColor()">Pink</button>
+  </li> -->
   <li class="nav-item">
-    <button mat-raised-button color="primary">Checkout</button>
+    <a [routerLink]="'/app-store'">Edit Inventory</a> 
   </li>
 </ul>
 
