--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -11,19 +11,19 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a (click)="goToMen()" class="nav-link">Men</a>
+        <a (click)="goToMen()" class="nav-link pointer-cursor">Men</a>
       </li>
       <li class="nav-item">
-        <a (click)="goToMen()" class="nav-link">Women</a>
+        <a (click)="goToMen()" class="nav-link pointer-cursor">Women</a>
       </li>
       <li class="nav-item">
-        <a (click)="goToAboutUs()" class="nav-link">About Us</a>
+        <a (click)="goToAboutUs()" class="nav-link pointer-cursor">About Us</a>
       </li>
       <li class="nav-item">
-        <a (click)="goToLogin()" class="nav-link">Login</a>
+        <a (click)="goToLogin()" class="nav-link pointer-cursor">Login</a>
       </li>
       <li class="nav-item">
-        <button (click)="goToEdit()">Test</button>
+        <a (click)="goToCart()" class="nav-link pointer-cursor">Edit Database</a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
