--- a/src/app/men/men.component.css
+++ b/src/app/men/men.component.css
@@ -23,7 +23,7 @@ body {
     transition: all 500ms;
     overflow: hidden;
 
-    background-size: auto;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
  }
@@ -41,12 +41,13 @@ body {
 
   /* Explicit grid */
   grid-template-areas:
-    "1 1 1 1"
-    "1 1 1 1"
-    "1 1 1 1";
+  'a  b  c  d'
+  'l  🌟 🌟 e'
+  'k  🌟 🌟 f'
+  'j  i  h  g';
 
   grid-template-rows: repeat(4, 25%);
-  grid-template-columns: 240px auto auto 240px;
+  grid-template-columns: auto;
 
   --stagger-delay: 100ms;
 }
