--- a/src/app/men/men.component.html
+++ b/src/app/men/men.component.html
@@ -29,7 +29,7 @@
             <button mat-raised-button color="primary" (click)="getClothingByColor()">Pink</button>
           </li> -->
           <li class="nav-item">
-            <a [routerLink]="'/app-store'">Edit Inventory</a>
+            <button (click)="goToEdit()">Edit Inventory</button> 
           </li>
         </ul>
       </div>
