--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,8 +16,8 @@
     filter: brightness(75%);
   }
   .text-container {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    /* display: grid;
+    grid-template-rows: 1fr 1fr 1fr; */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -32,7 +32,6 @@
   .text-container > h2 {
     color: white;
     font-size: 20px;
-    font-weight: bold;
     letter-spacing: 2px;
     text-align: center;
     margin-top: 10px;
@@ -43,6 +42,7 @@
   
   .center-buttons {
     align-items: center;
+    justify-items: center;
   }
   .cursive {
     font-family: 'Cookie', cursive;
@@ -126,6 +126,17 @@
   }
   /* end home page css */
 
-  
+  .btn-group {
+    margin-top: 20px;
+  }
 
-  
+  .btn-group > button {
+    width: 10em;
+  }
+  .button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+ 
