--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,15 +10,13 @@
           <div class="text-container">
             <h1>This is OnlyPhans</h1>
             <h2>A different perspective on clothing</h2>
-            <div class="btn-group mx-auto center-buttons" role="group" aria-label="Basic example">
-              <button type="button" class="btn btn-light spacer">Shop Men</button>
-              <button type="button" class="btn btn-light">Shop Women</button>
+            <div class="button-container">
+              <div class="btn-group">
+                <button (click)="goToMen()" type="button" class="btn btn-light btn-lg mr-3">Shop Men</button>
+                <button type="button" class="btn btn-light btn-lg">Shop Women</button>
+              </div>
             </div>
-            <!-- <div class="button-container">
-              <button type="button" class="btn btn-primary">Primary</button>
-              <button type="button" class="btn btn-primary">Primary</button>
-            </div> -->
-          </div>
+            
         </div>
       </div>
     </div>
