updated about us page

--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -57,7 +57,7 @@
   .banner {
     height: 340px;
     border-radius: 10px;
-    background-image: url("../../assets/AboutUsBanner.jpeg");
+    background-image: url("../../assets/AboutUsBanner2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 42%;
