--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -16,9 +16,13 @@
         <div class="top-inner-section">
           <div class="bio-description">
             <h2>What is OnlyPhans?</h2>
-            <p>OnlyPhans is your one stop shop for all your Phanboy desires! This PREMIUM site is highly popular amongst
-              the younger generation and gamers! With a little of something for everyone, we hope our Phans keep cumming
-              back over and over!</p>
+            <p>OnlyPhans is your one stop shop for all your clothing desires! This pioneer clothing store was inspired
+              by the colorful and spontaneous nature of our world! This site is highly popular amongst
+              the younger generation and people trying to live life a little more freely! Being established in 2020
+              amidst the Coronavirus pandemic, we are doing our best to keep our staff and customers safe while
+              delivering high quality products to inspire others during these troubling times! We are doing our best to
+              provide the most ethical brand of clothing in the industry by only purchasing from known eco-friendly
+              suppliers.</p>
           </div>
         </div>
       </div>
