--- a/src/app/men/men.component.css
+++ b/src/app/men/men.component.css
@@ -8,6 +8,21 @@ body {
     font-family: 'Noto Sans', sans-serif;
 }
 
+h1 {
+  text-align: left;
+  font-size: 15px;
+  letter-spacing: 2px;
+  color: rgb(83, 83, 83);
+  font-weight: lighter;
+}
+h2 {
+  text-align: left;
+  font-size: 15px;
+  letter-spacing: 2px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+}
+
 .card {
     display: flex;
     flex-direction: column;
@@ -165,4 +180,49 @@ section:after {
   content: "";
   display: table;
   clear: both;
+}
+
+
+.men-card {
+  display: grid;
+  grid-template-columns: repeat(3, 350px);
+  justify-items: center;
+  text-align: center;
+  grid-column-gap: 1em;
+  grid-row-gap: 1em;
+  margin: 20px 0px;
+}
+
+.img-fit {
+  width: 100%;
+  object-fit: cover;
+  padding-bottom: 10px;
+}
+
+.men-page {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  /* background-color: #f8f9fa; */
+  background-color: #FF6B6B;
+  width: 100%;
+}
+.men-nav {
+  /* background-color: #f8f9fa; */
+  background-color: #FF6B6B;
+  padding: 4em 5em;
+}
+
+.men-nav > ul > li {
+  list-style-type: none;
+  text-decoration: none;
+}
+
+a {
+  color: #fff;
+  text-align: left;
+}
+.men-page > div > img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
