--- a/src/app/men/men.component.html
+++ b/src/app/men/men.component.html
@@ -1,10 +1,51 @@
 <div class="main-container">
   <div class="three-row-body">
-    
+
     <app-main-nav></app-main-nav>
 
 
-    <div class="content-container">
+    <div class="men-page">
+      <div class="men-nav">
+        <ul>
+          <li><a href="#">Shirts</a></li>
+          <li><a href="#">Pants</a></li>
+          <li><a href="#">Jackets</a></li>
+          <li><a href="#">Shorts</a></li>
+          <li><a href="#">Shoes</a></li>
+          <li><a href="#">Backpack and Bags</a></li>
+          <li><a href="#">Accesories</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <img src="../../assets/men-banner.jpg">
+
+        <div class="men-card">
+          <div>
+            <img class="img-fit" src="../../assets/men-card1.webp">
+            <h1>The Air Crew Tee</h1>
+            <a href="#">$30.00</a>
+          </div>
+          <div>
+            <img class="img-fit" src="../../assets/men-card1.webp">
+            <h1>The Air Crew Tee</h1>
+            <a href="#">$30.00</a>
+          </div>
+          <div>
+            <img class="img-fit" src="../../assets/men-card1.webp">
+            <h1>The Air Crew Tee</h1>
+            <a href="#">$30.00</a>
+          </div>
+          <div>
+            <img class="img-fit" src="../../assets/men-card1.webp">
+            <h1>The Air Crew Tee</h1>
+            <a href="#">$30.00</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <!-- <div class="content-container">
       <section>
         <nav>
           <ul>
@@ -19,17 +60,23 @@
         </nav>
 
         <article>
-          <img src="../../assets/men-banner.webp">
-          <h1>London</h1>
-          <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a
-            metropolitan area of over 13 million inhabitants.</p>
-          <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back
-            to its founding by the Romans, who named it Londinium.</p>
+
+          <img src="../../assets/men-banner.jpg">
+
+          <div class="men-card">
+            <div>hello</div>
+
+          </div>
+          <div class="men-card">
+            <div>hello</div>
+
+          </div>
+        
         </article>
       </section>
 
-      <!-- Animated grid from lab -->
-      <!-- <section class="animated-grid">
+      Animated grid from lab
+      <section class="animated-grid">
         <div class="card" *ngFor="let clothing of clothings; let i = index">
           <img class="cover" [src]="clothing.clothing_url" alt="bike">
           <div class="card">
@@ -44,8 +91,8 @@
           <img class="cover" [src]="car.image_url" alt="bike">
           <h5 class="card-title">Card title</h5>
         </div>
-      </section> -->
-    </div>
+      </section>
+    </div> -->
 
     <app-main-footer></app-main-footer>
 
