added space for filters

--- a/src/app/men/men.component.html
+++ b/src/app/men/men.component.html
@@ -4,45 +4,60 @@
     <app-main-nav></app-main-nav>
 
 
-    <div class="men-page">
-      <div class="men-nav">
-        <ul>
-          <li><a href="#">Shirts</a></li>
-          <li><a href="#">Pants</a></li>
-          <li><a href="#">Jackets</a></li>
-          <li><a href="#">Shorts</a></li>
-          <li><a href="#">Shoes</a></li>
-          <li><a href="#">Backpack and Bags</a></li>
-          <li><a href="#">Accesories</a></li>
-        </ul>
-      </div>
-
+    <div class="men-page2">
       <div>
-        <img src="../../assets/men-banner.jpg">
-
-        <div class="men-card">
-          <div>
-            <img class="img-fit" src="../../assets/men-card1.webp">
-            <h1>The Air Crew Tee</h1>
-            <a href="#">$30.00</a>
-          </div>
-          <div>
-            <img class="img-fit" src="../../assets/men-card1.webp">
-            <h1>The Air Crew Tee</h1>
-            <a href="#">$30.00</a>
-          </div>
-          <div>
-            <img class="img-fit" src="../../assets/men-card1.webp">
-            <h1>The Air Crew Tee</h1>
-            <a href="#">$30.00</a>
-          </div>
-          <div>
-            <img class="img-fit" src="../../assets/men-card1.webp">
-            <h1>The Air Crew Tee</h1>
-            <a href="#">$30.00</a>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </div>
+      </div>
 
+      <div class="men-page">
+        <div class="men-nav">
+          <ul>
+            <li><a href="#">Shirts</a></li>
+            <li><a href="#">Pants</a></li>
+            <li><a href="#">Jackets</a></li>
+            <li><a href="#">Shorts</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">Backpack and Bags</a></li>
+            <li><a href="#">Accesories</a></li>
+          </ul>
+        </div>
+  
+        <div>
+          <img src="../../assets/men-banner.jpg">
+  
+          <div class="men-card">
+            <div>
+              <img class="img-fit" src="../../assets/men-card1.webp">
+              <h1>The Air Crew Tee</h1>
+              <a href="#">$30.00</a>
+            </div>
+            <div>
+              <img class="img-fit" src="../../assets/men-card1.webp">
+              <h1>The Air Crew Tee</h1>
+              <a href="#">$30.00</a>
+            </div>
+            <div>
+              <img class="img-fit" src="../../assets/men-card1.webp">
+              <h1>The Air Crew Tee</h1>
+              <a href="#">$30.00</a>
+            </div>
+            <div>
+              <img class="img-fit" src="../../assets/men-card1.webp">
+              <h1>The Air Crew Tee</h1>
+              <a href="#">$30.00</a>
+            </div>
+          </div>
+  
+        </div>
       </div>
     </div>
     <!-- <div class="content-container">
