--- a/src/app/men/men.component.css
+++ b/src/app/men/men.component.css
@@ -202,13 +202,18 @@ section:after {
 .men-page {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  /* background-color: #f8f9fa; */
-  background-color: #FF6B6B;
+  background-color: #f8f9fa;
+  /* background-color: #FF6B6B; */
   width: 100%;
 }
+.men-page2 {
+  display: grid;
+  grid-template-rows: 1fr 11fr;
+  background-color: cyan;
+}
 .men-nav {
-  /* background-color: #f8f9fa; */
-  background-color: #FF6B6B;
+  background-color: #f8f9fa;
+  /* background-color: #FF6B6B; */
   padding: 4em 5em;
 }
 
@@ -218,7 +223,7 @@ section:after {
 }
 
 a {
-  color: #fff;
+  color: #cccccc;
   text-align: left;
 }
 .men-page > div > img {
