--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,15 +2,15 @@
   <div></div>
   <form class="login-form box-shadow">
     <div class="login-logo">
-      <img src="../../assets/logo.jpeg" alt="logo">
+      <img src="../../assets/login.jpg" alt="logo">
     </div>      
     <div class="form-group">
       <label for="exampleInputEmail1">Email</label>
-      <input [(ngModel)]="user.email" name="email" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+      <input [(ngModel)]="user.email" name="email" type="text" class="form-control text-field-color-red" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input [(ngModel)]="user.password" name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input [(ngModel)]="user.password" name="password" type="password" class="form-control text-field-color-red" id="exampleInputPassword1" placeholder="Password">
     </div>
     <div class="form-group form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
