--- a/src/app/men/men.component.html
+++ b/src/app/men/men.component.html
@@ -5,43 +5,11 @@
 
 
     <div class="men-page2">
-      <div class="filter-grid">
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Size
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div><div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Price
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div><div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Color
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div><div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Category
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
+
+      <div>
+        <img src="../../assets/men-banner.jpg">
+        <div class="text-container">
+          <h1>Shop all men's clothing</h1>
         </div>
       </div>
 
@@ -59,82 +27,82 @@
         </div>
 
         <div>
-          <img src="../../assets/men-banner.jpg">
-
-          <div class="men-card">
+          <h2>Filters</h2>
+          <div class="filter-grid">
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Size
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Price
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Color
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Category
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div class="men-card" (click)="goToItem()">
             <div>
-              <img class="img-fit" src="../../assets/men-card1.webp">
-              <h1>The Air Crew Tee</h1>
+              <img class="img-fit pointer" src="../../assets/men-card1.webp">
+              <h3 class="pointer">The Air Crew Tee</h3>
               <a href="#">$30.00</a>
             </div>
             <div>
-              <img class="img-fit" src="../../assets/men-card1.webp">
-              <h1>The Air Crew Tee</h1>
+              <img class="img-fit pointer" src="../../assets/men-card1.webp">
+              <h3 class="pointer">The Air Crew Tee</h3>
               <a href="#">$30.00</a>
             </div>
             <div>
-              <img class="img-fit" src="../../assets/men-card1.webp">
-              <h1>The Air Crew Tee</h1>
+              <img class="img-fit pointer" src="../../assets/men-card1.webp">
+              <h3 class="pointer">The Air Crew Tee</h3>
               <a href="#">$30.00</a>
             </div>
             <div>
-              <img class="img-fit" src="../../assets/men-card1.webp">
-              <h1>The Air Crew Tee</h1>
+              <img class="img-fit pointer" src="../../assets/men-card1.webp">
+              <h3 class="pointer">The Air Crew Tee</h3>
               <a href="#">$30.00</a>
             </div>
           </div>
 
         </div>
       </div>
+
     </div>
-    <!-- <div class="content-container">
-      <section>
-        <nav>
-          <ul>
-            <li><a href="#">Shirts</a></li>
-            <li><a href="#">Pants</a></li>
-            <li><a href="#">Jackets</a></li>
-            <li><a href="#">Shorts</a></li>
-            <li><a href="#">Shoes</a></li>
-            <li><a href="#">Backpack and Bags</a></li>
-            <li><a href="#">Accesories</a></li>
-          </ul>
-        </nav>
-
-        <article>
-
-          <img src="../../assets/men-banner.jpg">
-
-          <div class="men-card">
-            <div>hello</div>
-
-          </div>
-          <div class="men-card">
-            <div>hello</div>
-
-          </div>
-        
-        </article>
-      </section>
-
-      Animated grid from lab
-      <section class="animated-grid">
-        <div class="card" *ngFor="let clothing of clothings; let i = index">
-          <img class="cover" [src]="clothing.clothing_url" alt="bike">
-          <div class="card">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Tshirt</p>
-          </div>
-          <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-          </div>
-        </div>
-        <div class="card" *ngFor="let car of cars; let i = index">
-          <img class="cover" [src]="car.image_url" alt="bike">
-          <h5 class="card-title">Card title</h5>
-        </div>
-      </section>
-    </div> -->
+    
 
     <app-main-footer></app-main-footer>
 
